--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "author": "Sleeyax",
   "dependencies": {
     "discord-rpc": "^3.1.3",
+    "http": "^0.0.1-security",
     "imdb": "^1.1.0",
     "needle": "^2.6.0",
-    "stremio-addon-sdk": "^1.6.2"
+    "stremio-addon-sdk": "^1.6.2",
+    "vercel": "^39.2.0"
   },
   "devDependencies": {
     "@types/stremio-addon-sdk": "^1.6.0"
