--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Sleeyax",
+  "author": "Alyzor",
   "dependencies": {
     "discord-rpc": "^3.1.3",
     "http": "^0.0.1-security",
