--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "stremio-discord",
   "version": "1.2.0",
   "description": "Show the movie or series you're watching in Discord",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
